# Roya_bot

./: README.md  bot.py  config.py  face_analyzer.py  models.py  persian_utils.py  personality_analyzer.py  pyproject.toml  rate_limiter.py  zarinpal.py
